force-app/main/default/objects/Device_Training_Certificate__c/Device_Training_Certificate__c.object-meta.xml
<CustomObject>
    <description>Junction object to store device training certificates and link to Salesforce Files</description>
    <label>Device Training Certificate</label>
    <nameField>
        <displayFormat>CERT-{000000}</displayFormat>
        <label>Certificate Reference</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Device Training Certificates</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>