force-app/main/default/objects/Device_Training_Certificate__c/fields/Candidate__c.field-meta.xml
<CustomField>
    <fullName>Candidate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Candidate</label>
    <referenceTo>Candidate__c</referenceTo>
    <relationshipLabel>Device Training Certificates</relationshipLabel>
    <relationshipName>Device_Training_Certificates</relationshipName>
    <type>Lookup</type>
</CustomField>