force-app/main/default/objects/Device_Training_Certificate__c/fields/ContentDocumentId__c.field-meta.xml
<CustomField>
    <fullName>ContentDocumentId__c</fullName>
    <description>Salesforce ContentDocument ID for file reference</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Content Document ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>