force-app/main/default/objects/Device_Training_Certificate__c/fields/Device_Training__c.field-meta.xml
<CustomField>
    <fullName>Device_Training__c</fullName>
    <label>Device Training</label>
    <referenceTo>Device_Training__c</referenceTo>
    <relationshipLabel>Device Training Certificates</relationshipLabel>
    <relationshipName>Device_Training_Certificates</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>