force-app/main/default/objects/Device_Training_Certificate__c/fields/File_Name__c.field-meta.xml
<CustomField>
    <fullName>File_Name__c</fullName>
    <description>Name of uploaded certificate file</description>
    <encryptionScheme>None</encryptionScheme>
    <label>File Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>