force-app/main/default/objects/Device_Training_Certificate__c/fields/Upload_Date__c.field-meta.xml
<CustomField>
    <fullName>Upload_Date__c</fullName>
    <description>Date certificate was uploaded</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Upload Date</label>
    <type>Date</type>
</CustomField>